UC alert tool/Content/SettingsStyle.css
/*start of sidebar*/
.sidebar .sidebar-nav.navbar-collapse { /*removes the padding from bootstrap */
  padding-left: 0;
  padding-right: 0;
}
.sidebar ul li {
  border-bottom: 1px solid #e7e7e7;
}
.sidebar ul li a.active {
  background-color: #eeeeee;
}
.sidebar .arrow {
  float: right;
}
.sidebar .fa.arrow:before {
  content: "\f104";
}
.sidebar .active > a > .fa.arrow:before {
  content: "\f107";
}
.sidebar .nav-second-level li,
.sidebar .nav-third-level li {
  border-bottom: none !important;
}
.sidebar .nav-second-level li a {
  padding-left: 37px;
}
.sidebar .nav-third-level li a {
  padding-left: 52px;
}
@media (min-width: 768px) {
  .sidebar {
    position: relative;
    width: 200px;
    margin-top: 0px;
    float:left;
    margin-right:15px;
  }
}
/*End of sidebar*/
.settingsContentWrapper{
    margin-left:250px;
}

